# semba

./: .gitattributes  .gitignore  NimInit.c  NimInit.h  README.md  config.nims  dungeongen.nim  enum_ex.nim  extsqlite.nim  meson.build  meson.options  nimble_wrapper.py  protojson.nim  semba.c  semba.h  semba.nim  semba.nimble  semba.sql  semba_error.nim  sembacore.nim  sembademo.nim  sembaex.nim  sembaprivate.nim  sembasave.nim  sembaserver.nim  sembastable.nim  test_semba.nim  test_wrapper.c  tutorialSkipGacha.sql  util.nim
.github/workflows/: testpr.yml
api_stable/: adventure.nim  battle.nim  character.nim  dungeon.nim  event.nim  follow.nim  formation.nim  gacha.nim  happy_worker.nim  item_request.nim  mail.nim  mission.nim  news.nim  shop.nim  tension_card.nim  tip.nim  user.nim  xb.nim
db_connector/: sqlite3.nim
model_semba/: known_location.nim  offline_log.nim
model_stable/: adventure_variable.nim  area.nim  area_change_lock.nim  area_group.nim  area_item.nim  area_locator.nim  area_object.nim  area_object_lock.nim  battle.nim  battle_enum.nim  challenge.nim  challenge_progress.nim  challenge_task.nim  character.nim  character_likability.nim  character_mounting_power.nim  character_piece.nim  city.nim  dungeon.nim  dungeon_area_item.nim  enemy.nim  entity.nim  follow.nim  formation.nim  gacha.nim  gear.nim  graffiti_art.nim  happy_worker.nim  item.nim  item_request.nim  lux_phantasma.nim  magic_orb.nim  mail.nim  mission.nim  nine_sequence.nim  notification.nim  resources.nim  reward.nim  sequence_request.nim  shop.nim  (+11 more)
scripts/: checkNimVersion.py  decompress_savefile.py  genAreaObjectLockTriggers.py  genAreaObjects.py  genGachaList.py  genMasterData.py  genMdDungeonAreaItem.py  genMdNineTrigger.py  genMdTensionCardLevelLimit.py  regenDungeonData.py
src/: semba.nim
src/semba/: dungeongen.nim  extsqlite.nim  protojson.nim  rng.nim  sembaprivate.nim  sembasave.nim  sembastable.nim  tutorialGacha.sql
src/semba/api_stable/: adventure.nim  battle.nim  character.nim  dungeon.nim  event.nim  follow.nim  formation.nim  gacha.nim  happy_worker.nim  mail.nim  mission.nim  purchase.nim  shop.nim  tension_card.nim  tip.nim  user.nim  xb.nim
src/semba/model_semba/: gear.nim  known_location.nim  offline_log.nim
src/semba/model_stable/: adventure_variable.nim  area.nim  area_change_lock.nim  area_group.nim  area_item.nim  area_locator.nim  area_object.nim  area_object_lock.nim  battle.nim  battle_enum.nim  challenge.nim  challenge_progress.nim  challenge_task.nim  character.nim  character_mounting_power.nim  character_piece.nim  city.nim  dungeon.nim  dungeon_area_item.nim  enemy.nim  entity.nim  follow.nim  formation.nim  gacha.nim  gear.nim  graffiti_art.nim  happy_worker.nim  item.nim  lux_phantasma.nim  magic_orb.nim  mail.nim  mission.nim  mission_count_reward_state.nim  nine_sequence.nim  notification.nim  resources.nim  reward.nim  sequence_request.nim  shop.nim  status.nim  (+11 more)
test_saves/: 16 fm can get one more.save  17 full mark stickers.save  5-2-2..save  after accept haywired drone challenge.save  after fixed mission receive_can receive again.save  after hoimi before branch manager.save  after puzzle.save  before beating third drone.save  before completing happy worker mission.save  before count reward.save  before elevator 20f unlock 2.save  before endrone fight bug.save  before first tutorial battle.save  before lvl break tc.save  before talk hoimi first.save  before talking enoki first.save  before talking miu after talking enoki.save  bugged Helpful Demeanor.save  bugged drones save file.save  bugged elevator.save  marine bio res center corridor.save  marine biology research center entrance.save  meiou isle after graffiti.save  meiou isle restricted area puzzle.save  savedungeon.save  skybridge marine biology research center door.save
tests/: test_adventure.nim  test_battle.nim  test_character.nim  test_dungeon.nim  test_extra.nim  test_follow.nim  test_graffiti_art.nim  test_happy_worker.nim  test_mission.nim  test_reward.nim  test_semba.nim  test_semba_private.nim  test_shop.nim  test_status.nim  test_tension_card.nim  test_tip.nim  utils.nim
tests/all/: test_adventure.nim  test_battle.nim  test_character.nim  test_dungeon.nim  test_extra.nim  test_follow.nim  test_graffiti_art.nim  test_happy_worker.nim  test_mission.nim  test_reward.nim  test_semba_private.nim  test_shop.nim  test_status.nim  test_tension_card.nim  test_tip.nim  utils.nim
